--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
 @media only screen and (min-device-width : 768px) {
     .grid-container{
         grid-template-columns: repeat(3,minmax(225px,1fr));
-        grid-auto-rows: max-content;
+        grid-auto-rows: minmax(min-content,60vh);
         grid-gap: 10px;
    }
    .card{
@@ -61,7 +61,7 @@ body {
         grid-template-rows: 0.4fr 1fr 0.1fr;
     }
     .card__image-container img{
-        width: 180px;
+        width: 150px;
     }
     .card__text{
         padding: 0 1.5vw;
